--- a/MiniProject_03_API/MiniProject_03_API.ipynb
+++ b/MiniProject_03_API/MiniProject_03_API.ipynb
@@ -181,7 +181,7 @@
    "outputs": [],
    "source": [
     "# 1. Collect data from the Franfurt Stock Exchange, for the ticker AFX_X, for the whole year 2017 (keep in mind that the date format is YYYY-MM-DD).\n",
-    "r = requests.get('https://www.quandl.com/api/v3/datasets/FSE/AFX_X?start_date=2017-01-01&end_date=2017-12-31&api_key=xuZSo4dt461D5ntGA_iG')"
+    "r = requests.get('https://www.quandl.com/api/v3/datasets/FSE/AFX_X?start_date=2017-01-01&end_date=2017-12-31&api_key=')"
    ]
   },
   {
